Correcting display bug on navbar for tablet screen, removing stackoverflow link, adding paypal link & titles on footer links

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -200,7 +200,7 @@ hr.star-primary:after
     transition padding 0.3s
 
   .navbar-custom .navbar-brand
-    font-size 2em
+    font-size 1.5em
     -webkit-transition all 0.3s
     -moz-transition all 0.3s
     transition all 0.3s
@@ -209,7 +209,7 @@ hr.star-primary:after
     padding 10px 0
 
   .navbar-custom.affix .navbar-brand
-    font-size 1.5em
+    font-size 1.2em
 
 /* SECTION */
 
